# ZYagent

./: DEPLOY.md
.github/workflows/: build-desktop.yml  test-macos.yml
admin-web/: index.html  package.json  tsconfig.json  vite.config.ts
admin-web/src/: App.vue
admin-web/src/api/: client.ts
admin-web/src/components/: AdminLayout.vue
admin-web/src/router/: index.ts
admin-web/src/stores/: adminStore.ts  authStore.ts
admin-web/src/views/: AuditLog.vue  Dashboard.vue  GroupManage.vue  Login.vue  MemoryManage.vue  SoulManage.vue  SystemSettings.vue  TaskManage.vue  UserManage.vue  WorkspaceManage.vue
backend/: README.md
backend/admin-service/: check-db.js  create-group-table.js  create_test_user.js  jest.config.js  package-lock.json  package.json  reset_pass.js  tsconfig.json
backend/admin-service/src/: index.ts
backend/core-service/: Dockerfile  fix-dist.js  fix-ws-group.js  fix-ws-server.js  package-lock.json  package.json  start.sh  test-debug.js  test-group-chat-long.js  test-group-chat.js  tsconfig.tsbuildinfo
backend/core-service/migrations/: 001_init.sql  006_topic_isolation.sql  007_ilink_tables.sql  008_scheduler_and_memory.sql  009_media_and_files.sql  010_final_cleanup.sql  011_workspaces.sql  012_tasks.sql  013_review.sql  (+1 more)
desktop/: package-lock.json  package.json  vite.config.ts
desktop-vue/: index.html  package.json  tsconfig.json  vite.config.ts
desktop-vue/electron/: main.ts  preload.ts
desktop-vue/src/: App.vue
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
(+92 files in other folders)
