[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw Desktop - AI Agent Workspace"
authors = ["OpenClaw Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
open = "5"
notify-rust = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
